# rdfadf

./: LICENSE.txt  README.md  README_english.md  README_japanese.md  pyproject.toml  rdfadfhist_example.ipynb
src/rdfadf/: __init__.py  adf.py  label_utils.py  periodic_info.py  rdf.py
